# chemical-mime

./: HACKING  Makefile.am  NEWS  README  THANKS  TODO  chemical-mime-data.pc.in  configure.ac
branches/0.2/: ChangeLog  acinclude.m4
branches/0.2/gnome/: Makefile.am
branches/0.2/po/: ChangeLog
branches/0.2/xsl/: cmd_common.xsl  cmd_gnome-keys.xsl
branches/MAIN/chemical-mime-data/: AUTHORS  NEWS  README  configure.ac
branches/MAIN/chemical-mime-data/freedesktop.org/: Makefile.am
branches/MAIN/chemical-mime-data/gnome/: Makefile.am
branches/MAIN/chemical-mime-data/po/: POTFILES.in
chemical-mime-data/: .cvsignore  AUTHORS  ChangeLog  HACKING  Makefile.am  NEWS  README  THANKS  TODO  autogen.sh  chemical-mime-data.pc.in  configure.ac
chemical-mime-data/freedesktop.org/: Makefile.am
chemical-mime-data/gnome/: Makefile.am
chemical-mime-data/html_docs/: Makefile.am  cmd.css  index.html
chemical-mime-data/icons/: Makefile.am
chemical-mime-data/icons/hicolor/: Makefile.am
chemical-mime-data/icons/pixmaps/: Makefile.am
chemical-mime-data/kde/: Makefile.am
chemical-mime-data/po/: ChangeLog  POTFILES.in  de.po  fr.po
chemical-mime-data/src/: Makefile.am  chemical-mime-database.xml.in
chemical-mime-data/test/: Makefile.am  Makefile.incl  compare_pattern.xsl  gnome-vfs-mime.xsl  kde-mimelnk.xsl
chemical-mime-data/xsl/: cmd_common.xsl  cmd_file-magic.xsl  cmd_freedesktop_org.xsl  cmd_gnome-keys.xsl  cmd_gnome-mime.xsl  cmd_kde.xsl  cmd_website.xsl
file/: Makefile.am
html_docs/: cmd.css  index.html
mime-support/: Makefile.am
po/: ChangeLog  Makevars  de.po  fr.po  ka.po
src/: Makefile.am  chemical-mime-database.xml.in
tags/HEAD/chemical-mime-data/: ChangeLog  TODO
tags/HEAD/chemical-mime-data/po/: fr.po
tags/release_0_1_94/chemical-mime-data/: HACKING  Makefile.am  NEWS  THANKS  autogen.sh  configure.ac
tags/release_0_1_94/chemical-mime-data/html_docs/: index.html
tags/release_0_1_94/chemical-mime-data/icons/hicolor/: Makefile.am
tags/release_0_1_94/chemical-mime-data/kde/: Makefile.am
tags/release_0_1_94/chemical-mime-data/po/: ChangeLog  POTFILES.in
tags/release_0_1_94/chemical-mime-data/src/: chemical-mime-database.xml.in
tags/release_0_1_94/chemical-mime-data/xsl/: Makefile.am  cmd_freedesktop_org.xsl  cmd_gnome-mime.xsl
test/: Makefile.am  Makefile.incl  compare_pattern.xsl  kde-mimelnk.xsl  mime-types.xsl
trunk/chemical-mime-data/: .cvsignore  AUTHORS  ChangeLog  HACKING  Makefile.am  NEWS  README  THANKS  TODO  acinclude.m4  autogen.sh  chemical-mime-data.pc.in  configure.ac
trunk/chemical-mime-data/file/: Makefile.am
trunk/chemical-mime-data/freedesktop.org/: Makefile.am
trunk/chemical-mime-data/gnome/: Makefile.am
trunk/chemical-mime-data/html_docs/: Makefile.am  cmd.css  index.html
trunk/chemical-mime-data/icons/: Makefile.am
trunk/chemical-mime-data/icons/hicolor/: Makefile.am
trunk/chemical-mime-data/icons/pixmaps/: Makefile.am
trunk/chemical-mime-data/kde/: Makefile.am
trunk/chemical-mime-data/po/: ChangeLog  Makevars  de.po  fr.po  ru.po
trunk/chemical-mime-data/src/: Makefile.am  chemical-mime-database.xml.in
trunk/chemical-mime-data/test/: Makefile.am  Makefile.incl  compare_pattern.xsl  gnome-vfs-mime.xsl  kde-mimelnk.xsl
trunk/chemical-mime-data/xsl/: Makefile.am  cmd_common.xsl  cmd_file-magic.xsl  cmd_freedesktop_org.xsl  cmd_gnome-keys.xsl  cmd_gnome-mime.xsl  cmd_kde.xsl  cmd_website.xsl
xsl/: Makefile.am  cmd_entities.dtd.in  cmd_file-magic.xsl  cmd_freedesktop_org.xsl  cmd_mime_types.xsl  cmd_website.xsl
